force-app/main/default/objects/Product_Loan_Item__c/Product_Loan_Item__c.object-meta.xml
<CustomObject>
    <description>An individual item in the product loan</description>
    <label>Product Loan Item</label>
    <nameField>
        <label>Product Loan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Loan Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>