force-app/main/default/objects/Product_Loan_Item__c/fields/Colour_of_product__c.field-meta.xml
<CustomField>
    <fullName>Colour_of_product__c</fullName>
    <description>The colour of the product loaned</description>
    <inlineHelpText>The colour of the product loaned</inlineHelpText>
    <label>Colour of product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>