force-app/main/default/objects/Product_Loan_Item__c/fields/Damage_Description__c.field-meta.xml
<CustomField>
    <fullName>Damage_Description__c</fullName>
    <description>Describe the damage to the product</description>
    <inlineHelpText>Describe the damage to the product</inlineHelpText>
    <label>Damage Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>