force-app/main/default/objects/Product_Loan_Item__c/fields/Damaged_on_collection__c.field-meta.xml
<CustomField>
    <fullName>Damaged_on_collection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was the product damaged on collection?</description>
    <inlineHelpText>Was the product damaged on collection?</inlineHelpText>
    <label>Damaged on collection</label>
    <type>Checkbox</type>
</CustomField>