force-app/main/default/objects/Product_Loan_Item__c/fields/Damaged_on_return__c.field-meta.xml
<CustomField>
    <fullName>Damaged_on_return__c</fullName>
    <defaultValue>false</defaultValue>
    <description>was the product damaged on return?</description>
    <inlineHelpText>was the product damaged on return?</inlineHelpText>
    <label>Damaged on return</label>
    <type>Checkbox</type>
</CustomField>