force-app/main/default/objects/Product_Loan_Item__c/fields/Description_of_product__c.field-meta.xml
<CustomField>
    <fullName>Description_of_product__c</fullName>
    <description>The description of the product on loan</description>
    <inlineHelpText>The description of the product on loan</inlineHelpText>
    <label>Description of product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>