force-app/main/default/objects/Product_Loan_Item__c/fields/Outlet_Price__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Price__c</fullName>
    <description>The outlet price of the product</description>
    <inlineHelpText>The outlet price of the product</inlineHelpText>
    <label>Outlet Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>