force-app/main/default/objects/Product_Loan_Item__c/fields/Product_Loan__c.field-meta.xml
<CustomField>
    <fullName>Product_Loan__c</fullName>
    <description>The product loan that the item belongs to</description>
    <inlineHelpText>The product loan that the item belongs to</inlineHelpText>
    <label>Product Loan</label>
    <referenceTo>Product_Loan__c</referenceTo>
    <relationshipLabel>Product Loan Items</relationshipLabel>
    <relationshipName>Product_Loan_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>