force-app/main/default/objects/Product_Loan_Item__c/fields/Product_Reference_SKU__c.field-meta.xml
<CustomField>
    <fullName>Product_Reference_SKU__c</fullName>
    <description>The product reference number or SKU</description>
    <inlineHelpText>The product reference number or SKU</inlineHelpText>
    <label>Product Reference SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>