force-app/main/default/objects/Product_Loan_Item__c/fields/Quantity_of_product__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_product__c</fullName>
    <description>The quantity of products on loan</description>
    <inlineHelpText>The quantity of products on loan</inlineHelpText>
    <label>Quantity of product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>