force-app/main/default/objects/Product_Loan_Item__c/fields/Retail_Price__c.field-meta.xml
<CustomField>
    <fullName>Retail_Price__c</fullName>
    <description>The retail price of the product</description>
    <inlineHelpText>The retail price of the product</inlineHelpText>
    <label>Retail Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>