force-app/main/default/objects/Product_Loan_Item__c/fields/Sample_Product__c.field-meta.xml
<CustomField>
    <fullName>Sample_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a sample product?</description>
    <inlineHelpText>Is this a sample product?</inlineHelpText>
    <label>Sample Product</label>
    <type>Checkbox</type>
</CustomField>