force-app/main/default/objects/Product_Loan_Item__c/fields/Sample_Product_Price__c.field-meta.xml
<CustomField>
    <fullName>Sample_Product_Price__c</fullName>
    <description>The price of the sample product</description>
    <inlineHelpText>The price of the sample product</inlineHelpText>
    <label>Sample Product Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>